# pyCFDtoolkit

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
cfdtoolbox/: __init__.py  _logger.py
cfdtoolbox/cfx/: __init__.py  case.py  ccl.py  cmd.py  core.py  definition.py  mon.py  out.py  result.py  session.py  solve.py  utils.py
cfdtoolbox/cfx/boundary_conditions/: __init__.py  inlet.py
cfdtoolbox/cfx/session_files/: cfx2def.pre  change_timestep.pre  change_timestep_and_write_def.pre  importccl.pre
cfdtoolbox/cfx/tests/: test_core.py
cfdtoolkit/: __init__.py  _html.py  _version.py  convergence.py  style.css  typing.py
cfdtoolkit/cfx/: __init__.py  case.py  ccl.py  cmd.py  core.py  definition.py  exe.py  installation.py  mon.py  out.py  pre.py  result.py  session.py  solve.py  utils.py
cfdtoolkit/cfx/boundary_conditions/: axis.py  flowdir.py  inlet.py
cfdtoolkit/cfx/session_files/: README.md  cfx2ccl.pre  cfx2def.pre  change_timestep.pre  change_timestep_and_write_def.pre  def2cfx.pre  importccl.pre  res2cfx.pre
cfdtoolkit/cfx/tests/: test_core.py
cfdtoolkit/convergence/: gci.py  significance.py
cfdtoolkit/tests/: test_version.py
examples/: ansys_cfx.ipynb  convergence.ipynb
examples/cfx/: ansys_cfx.ipynb  ansys_cfx_getting_started.ipynb  ansys_cfx_steady_state.ipynb  ansys_cfx_transient.ipynb  cfx.env  steady_state.py
testdata/: simpleRotor
testdata/cylinderflow/: cyl_steadystate_laminar.cfx  inlet_profile_Re20.csv
testdata/cylinderflow/steady_state/: cyl_steadystate_laminar.cfx
testdata/cylinderflow/transient/: cyl_transient_laminar.cfx
