[metadata]
name = pyCFDtoolkit
version = 0.4.4
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = "Toolkit to manage and post-process CFD runs"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/pyCFDtoolkit
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"

[options]
packages = find:
python_requires = >=3.8, <3.10
include_package_data = True
install_requires =
    appdirs
    h5py
    python-dotenv
    pandas
    xarray

[options.extras_require]
jl =
    jupyterlab
test =
    pytest
    pytest-cov
    pylint
complete =
    %(jl)s
    %(test)s

[options.package_data]
mypkg =
    *.css
    *.pre

[tool:pytest]
python_files = test_*.py
testpaths = cfdtoolkit/tests

[coverage:paths]
source =
    tests

[coverage:run]
relative_files = true

